syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/romulodm/gobet/auth/pb";

message User {
    string username = 1;
    string email = 2;
    string password = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}